--- a/components/app/styles/main.less
+++ b/components/app/styles/main.less
@@ -1,8 +1,1 @@
-.box {
-  color: saturate(@base, 5%);
-  border-color: lighten(@base, 30%);
-
-  div {
-    .box-shadow(0 0 5px, 30%)
-  }
-}
+@import "/styles/variables.less";
