--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -611,7 +611,7 @@
     .container,
     .navbar-static-top .container,
     .navbar-fixed-top .container,
-    .navbar-fixed-bottom .container { .span(@gridColumns); }
+    .navbar-fixed-bottom .container { .span(@gridColumns); .container-fixed(); }
 
     // generate .spanX and .offsetX
     .spanX (@gridColumns);
