--- a/styles/variables.less
+++ b/styles/variables.less
@@ -40,6 +40,7 @@
 // -------------------------
 
 @white:                 #fff;
+@black:                 #000;
 @body-bg:               @white;
 @text-color:            @gray-dark;
 
@@ -57,7 +58,7 @@
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          14px;
+@font-size-base:          17px;
 @font-size-large:         (@font-size-base * 1.25); // ~18px
 @font-size-small:         (@font-size-base * 0.85); // ~12px
 @font-size-mini:          (@font-size-base * 0.75); // ~11px
@@ -144,6 +145,51 @@
 
 @dropdownLinkBackgroundActive:  @link-color;
 @dropdownLinkBackgroundHover:   @dropdownLinkBackgroundActive;
+
+// GRID
+// --------------------------------------------------
+
+
+// Default 1195px grid
+// -------------------------
+@gridColumns:             10;
+@gridColumnWidth:         106px;
+@gridGutterWidth:         15px;
+@gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
+
+// 1200px min
+@gridColumnWidth1200:     70px;
+@gridGutterWidth1200:     30px;
+@gridRowWidth1200:        (@gridColumns * @gridColumnWidth1200) + (@gridGutterWidth1200 * (@gridColumns - 1));
+
+// 768px-979px
+@gridColumnWidth768:      42px;
+@gridGutterWidth768:      20px;
+@gridRowWidth768:         (@gridColumns * @gridColumnWidth768) + (@gridGutterWidth768 * (@gridColumns - 1));
+
+
+// Fluid grid
+// -------------------------
+@fluidGridColumnWidth:    percentage(@gridColumnWidth/@gridRowWidth);
+@fluidGridGutterWidth:    percentage(@gridGutterWidth/@gridRowWidth);
+
+// 1200px min
+@fluidGridColumnWidth1200:     percentage(@gridColumnWidth1200/@gridRowWidth1200);
+@fluidGridGutterWidth1200:     percentage(@gridGutterWidth1200/@gridRowWidth1200);
+
+// 768px-979px
+@fluidGridColumnWidth768:      percentage(@gridColumnWidth768/@gridRowWidth768);
+@fluidGridGutterWidth768:      percentage(@gridGutterWidth768/@gridRowWidth768);
+
+// Forms
+// -------------------------
+@inputBackground:               @white;
+@inputBorder:                   #ccc;
+@inputBorderRadius:             @border-radius-base;
+@inputDisabledBackground:       @gray-lighter;
+@formActionsBackground:         #f5f5f5;
+@inputHeight:                   @line-height-base + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
+
 
 // Images
 // -------------------------
