--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -1,8 +1,10 @@
-@import "/styles/variables.less";
-@import "/styles/mixins.less";
-
 // Header Navbar
 // -------------------------
+
+// Globals
+// -------------------------
+@import "/styles/variables.less";
+@import "/styles/mixins.less";
 
 // Variables
 // -------------------------
@@ -131,9 +133,14 @@
   width: 210px;
 }
 
+.header-navbar .badge-wrapper {
+  overflow: hidden;
+}
+
 .header-navbar .badge {
   width: 210px;
   height: 100%;
+  margin-left: 6px;
 
   background: rgb(72,72,72); /* Old browsers */
   background: -moz-linear-gradient(top,  rgba(72,72,72,1) 0%, rgba(29,26,27,1) 100%); /* FF3.6+ */
@@ -143,4 +150,10 @@
   background: -ms-linear-gradient(top,  rgba(72,72,72,1) 0%,rgba(29,26,27,1) 100%); /* IE10+ */
   background: linear-gradient(to bottom,  rgba(72,72,72,1) 0%,rgba(29,26,27,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#484848', endColorstr='#1d1a1b',GradientType=0 ); /* IE6-9 */
+
+  box-shadow:
+           1px 0 3px rgba(0,0,0, 0.45)
+  ,       -1px 0 3px rgba(0,0,0, 0.45)
+  , inset  1px 0 0   rgba(255,255,255, 0.02)
+  , inset -1px 0 0   rgba(255,255,255, 0.02);
 }
