--- a/styles/variables.less
+++ b/styles/variables.less
@@ -15,6 +15,7 @@
 @gray:                   lighten(#000, 33.5%); // #555
 @gray-light:             lighten(#000, 60%);   // #999
 @gray-lighter:           lighten(#000, 93.5%); // #eee
+@gray-saturated:         #1d1a1b;
 
 // Brand colors
 // -------------------------
@@ -196,3 +197,4 @@
 
 @texture-linen:             "../img/texture-linen.jpg";
 @body-gradient:             "../img/body-bg.png";
+@sprite-path:               "../img/sprite.png";
