--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -47,7 +47,26 @@
 
     <div class="span2 badge-wrapper">
       <div class="badge">
-
+        <div class="avatar-wrapper">
+          <span class="avatar-shadow"></span>
+          <img class="avatar" src="/img/placeholder/avatar-38x38.jpg" />
+        </div>
+        <span class="username">Willmer123</span>
+        <i class="icon-chevron-down expansion-indicator"></i>
+        <ul class="dropdown-menu">
+            <li>
+              <a href="#">Connect your Keytag</a>
+            </li>
+            <li>
+              <a href="#">Your PunchCards</a>
+            </li>
+            <li>
+              <a href="#">Settings</a>
+            </li>
+            <li>
+              <a href="#">Log Out</a>
+            </li>
+        </ul>
       </div>
     </div>
   </div>
