--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -87,6 +87,7 @@
 .header-navbar .dropdown-menu {
   top: 58px;
   left: -50%;
+  padding: 0;
 
   overflow: hidden;
 
@@ -102,7 +103,6 @@
 
 .header-navbar .dropdown:hover > .dropdown-menu {
   display: block;
-  padding: 0;
 }
 
 .header-navbar .dropdown-menu li > a {
@@ -128,7 +128,14 @@
   border-top: none;
 }
 
-.dropdown-more > .dropdown-menu {
+// When first element is highlighted, it covers up the
+// faux shadow created for the navbar
+// This completes the illusion
+.header-navbar .dropdown-menu li:first-child > a:hover {
+  box-shadow: inset 0 2px 3px rgba(29, 26, 27, 0.33);
+}
+
+.header-navbar .nav .dropdown-menu {
   margin-left: -38px;
   width: 210px;
 }
@@ -138,6 +145,8 @@
 }
 
 .header-navbar .badge {
+  position: relative;
+
   width: 210px;
   height: 100%;
   margin-left: 6px;
@@ -156,4 +165,58 @@
   ,       -1px 0 3px rgba(0,0,0, 0.45)
   , inset  1px 0 0   rgba(255,255,255, 0.02)
   , inset -1px 0 0   rgba(255,255,255, 0.02);
+
+  cursor: pointer;
+}
+
+.badge .expansion-indicator {
+  position: absolute;
+  right: 15px;
+  top: 21px;
+}
+
+.badge .username {
+  display: inline-block;
+  margin-top: 13px;
+  margin-left: 10px;
+
+  vertical-align: middle;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  text-shadow: 0 -1px fade(@gray-saturated, 20%);
+}
+
+.badge .avatar-wrapper {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: 10px;
+  margin-left: 13px;
+  width: 38px;
+  height: 38px;
+  overflow: hidden;
+  border-radius: 5px;
+  border: solid #1f1f1f 1px;
+}
+
+.badge .avatar-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  border-top: solid #fff 1px;
+  opacity: 0.3;
+}
+
+.badge .dropdown-menu {
+  width: 210px;
+  margin-left: 0;
+  left: 0;
+}
+
+.badge.active .dropdown-menu {
+  display: block;
 }
