--- a/styles/main.less
+++ b/styles/main.less
@@ -8,6 +8,7 @@
 @import "grid.less";
 @import "navs.less";
 @import "dropdowns.less";
+@import "sprite.less";
 
 html {
   background: url('@{texture-linen}');
