--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -43,7 +43,7 @@
 }
 
 .header-navbar .logo-wrapper {
-  text-align: right;
+  // text-align: right;
 }
 
 .header-navbar .logo {
@@ -142,6 +142,12 @@
 
 .header-navbar .badge-wrapper {
   overflow: hidden;
+  // In order to compensate for the extra margin the badge
+  // has to have, reduce the margin-left by 6px
+  margin-left: @gridGutterWidth - 6px;
+  padding-right: 6px;
+
+  text-align: right;
 }
 
 .header-navbar .badge {
@@ -167,6 +173,7 @@
   , inset -1px 0 0   rgba(255,255,255, 0.02);
 
   cursor: pointer;
+  text-align: left;
 }
 
 .badge .expansion-indicator {
