fix anchor hrefs

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -11,7 +11,7 @@
           <a href="/#/explore">Explore</a>
         </li>
         <li>
-          <a href="/#/my-collections">My Collections</a>
+          <a href="/#/collections">My Collections</a>
         </li>
         <li class="dropdown dropdown-more">
           <a href="/#/more">More</a>
@@ -61,7 +61,7 @@
               <a href="#">Your PunchCards</a>
             </li>
             <li>
-              <a href="#">Settings</a>
+              <a href="/#/settings">Settings</a>
             </li>
             <li>
               <a href="#">Log Out</a>
