add in typography, page specific styles

--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -43,7 +43,7 @@
 }
 
 .header-navbar .logo-wrapper {
-  // text-align: right;
+  text-align: right;
 }
 
 .header-navbar .logo {
@@ -145,9 +145,7 @@
   // In order to compensate for the extra margin the badge
   // has to have, reduce the margin-left by 6px
   margin-left: @gridGutterWidth - 6px;
-  padding-right: 6px;
-
-  text-align: right;
+  padding-left: 6px;
 }
 
 .header-navbar .badge {
@@ -155,7 +153,6 @@
 
   width: 210px;
   height: 100%;
-  margin-left: 6px;
 
   background: rgb(72,72,72); /* Old browsers */
   background: -moz-linear-gradient(top,  rgba(72,72,72,1) 0%, rgba(29,26,27,1) 100%); /* FF3.6+ */
@@ -173,7 +170,6 @@
   , inset -1px 0 0   rgba(255,255,255, 0.02);
 
   cursor: pointer;
-  text-align: left;
 }
 
 .badge .expansion-indicator {
