--- a/pages/explore/explore-tmpl.handlebars
+++ b/pages/explore/explore-tmpl.handlebars
@@ -1,1 +1,30 @@
-<h1>Explore</h1>
+<header class="page-header">
+  <h1 class="page-title">Explore</h1>
+
+  <div class="row">
+    {{! Search }}
+    <div class="span1 search-wrapper">
+      {{! Wrap input in form to use onSubmit event }}
+      <form id="explore-search-form">
+        <input class="field-search" type="text">
+      </form>
+    </div>
+
+    {{! Filters Button Group }}
+    <div class="span6 filters-wrapper">
+      <div class="btn-group filters-btn-group">
+        <button class="btn filter-popular">
+          Popular
+        </button>
+        <button class="btn filter-nearby">
+          Nearby
+        </button>
+        <button class="btn filter-random">
+          Mix-It-Up!
+        </button>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="products-list"></div>
