--- a/styles/main.less
+++ b/styles/main.less
@@ -5,11 +5,13 @@
 // Components
 @import "normalize.less";
 @import "scaffolding.less";
+@import "typography.less";
 @import "grid.less";
 @import "navs.less";
 @import "dropdowns.less";
 @import "sprite.less";
 @import "modals.less";
+@import "pages.less";
 
 html {
   background: url('@{texture-linen}');
