--- a/styles/variables.less
+++ b/styles/variables.less
@@ -67,7 +67,7 @@
 @line-height-base:        20px;
 
 @headings-font-family:    inherit; // empty to use BS default, @font-family-base
-@headings-font-weight:    500;
+@headings-font-weight:    300;
 
 // Components
 // -------------------------
@@ -190,6 +190,26 @@
 @inputDisabledBackground:       @gray-lighter;
 @formActionsBackground:         #f5f5f5;
 @inputHeight:                   @line-height-base + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
+
+
+// Input placeholder text color
+// -------------------------
+@placeholderText:         @gray-light;
+
+
+// Hr border color
+// -------------------------
+@hrBorder:                @gray-lighter;
+
+
+// Horizontal forms & lists
+// -------------------------
+@horizontalComponentOffset:       180px;
+
+
+// Wells
+// -------------------------
+@wellBackground:                  #f5f5f5;
 
 
 // Images
