--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -15,23 +15,25 @@
   .ie7-inline-block();
   padding: 4px 12px;
   margin-bottom: 0; // For input.btn
-  font-size: @baseFontSize;
-  line-height: @baseLineHeight;
+  font-size: @font-size-small;
+  line-height: @line-height-base;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  .buttonBackground(@btnBackground, @btnBackgroundHighlight, @grayDark, 0 1px 1px rgba(255,255,255,.75));
+  .buttonBackground(@btnBackground, @btnBackgroundHighlight, @gray-dark, 0 1px 1px rgba(255,255,255,.75));
   border: 1px solid @btnBorder;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
   border-bottom-color: darken(@btnBorder, 10%);
-  .border-radius(@baseBorderRadius);
+  color: @gray;
+
+  .border-radius(@border-radius-base);
   .ie7-restore-left-whitespace(); // Give IE7 some love
   .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)");
 
   // Hover/focus state
   &:hover,
   &:focus {
-    color: @grayDark;
+    color: @gray;
     text-decoration: none;
     background-position: 0 -15px;
 
@@ -72,7 +74,7 @@
 // Large
 .btn-large {
   padding: @padding-large;
-  font-size: @font-size-large;
+  font-weight: 600;
   .border-radius(@border-radius-large);
 }
 .btn-large [class^="icon-"],
@@ -215,17 +217,17 @@ input[type="submit"].btn {
 .btn-link {
   border-color: transparent;
   cursor: pointer;
-  color: @linkColor;
+  color: @link-color;
   .border-radius(0);
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: @linkColorHover;
+  color: @link-hover-color;
   text-decoration: underline;
   background-color: transparent;
 }
 .btn-link[disabled]:hover,
 .btn-link[disabled]:focus {
-  color: @grayDark;
+  color: @gray-dark;
   text-decoration: none;
 }
