--- a/styles/main.less
+++ b/styles/main.less
@@ -6,11 +6,14 @@
 @import "normalize.less";
 @import "scaffolding.less";
 @import "typography.less";
+@import "buttons.less";
+@import "btn-groups.less";
 @import "grid.less";
 @import "navs.less";
 @import "dropdowns.less";
 @import "sprite.less";
 @import "modals.less";
+@import "forms.less";
 @import "pages.less";
 
 html {
