--- a/styles/pages.less
+++ b/styles/pages.less
@@ -1,4 +1,31 @@
-.page-header h1 {
+.page-header-box {
+  width: 100%;
+  padding: 26px 15px 0 15px;
+  margin-left: -15px;
+
+  border-radius: @border-radius-base;
+  .box-shadow(0 1px 5px rgba(0,0,0, 0.4));
+
+  background: rgb(245,245,245); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 50%, rgba(245,245,245,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%,rgba(255,255,255,1)), color-stop(100%,rgba(245,245,245,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(245,245,245,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(245,245,245,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(245,245,245,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(255,255,255,1) 50%,rgba(245,245,245,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
+}
+
+.page-header-box h1 {
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 24px;
+}
+
+.page-header-box .filters-wrapper {
+  text-align: center;
+}
+
+.page-header-box .filters-btn-group > .btn {
+  text-transform: uppercase;
 }
