--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -28,7 +28,7 @@
 
   .border-radius(@border-radius-base);
   .ie7-restore-left-whitespace(); // Give IE7 some love
-  .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)");
+  .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.2), 0 1px 1px rgba(0,0,0,0.1)");
 
   // Hover/focus state
   &:hover,
