--- a/styles/pages.less
+++ b/styles/pages.less
@@ -1,6 +1,6 @@
 .page-header-box {
   width: 100%;
-  padding: 26px 15px 0 15px;
+  padding: 26px 15px 12px 15px;
   margin-left: -15px;
 
   border-radius: @border-radius-base;
@@ -14,6 +14,15 @@
   background: -ms-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(245,245,245,1) 100%); /* IE10+ */
   background: linear-gradient(to bottom,  rgba(255,255,255,1) 50%,rgba(245,245,245,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
+}
+
+// Normalize form stylings for search boxes
+.page-header-box form {
+  margin: 0;
+}
+
+.page-header-box .field-search {
+  margin: 4px 0 0 0;
 }
 
 .page-header-box h1 {
