--- a/styles/main.less
+++ b/styles/main.less
@@ -27,8 +27,7 @@ body {
   line-height:    @line-height-base;
   color:          @text-color;
   background:     url('@{body-gradient}') top center repeat-y;
-  // temporary
-  height: 1200px;
+  min-height:     1000px;
 }
 
 
