--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -28,4 +28,10 @@
   margin-top: 1px;
 }
 
-.icon-chevron-down              { background-position: -4px   -5px; width: 16px; }
+.icon-chevron-down  { #icons > .chevron-down() }
+.icon-like          { #icons > .like() }
+.icon-like-active   { #icons > .like-active() }
+.icon-want          { #icons > .want() }
+.icon-want-active   { #icons > .want-active() }
+.icon-try           { #icons > .try() }
+.icon-try-active    { #icons > .try-active() }
