--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -64,7 +64,7 @@
 
   .transition(top @productHoverTransition);
 
-  box-shadow: 0 1px 2px rgba(0,0,0, 0.4);
+  box-shadow: 0 1px 2px rgba(0,0,0, 0.22);
 
   #gradient > .vertical(rgba(255,255,255, 1), rgba(255,255,255, 0.78));
 }
@@ -118,6 +118,7 @@
 .product-list-item .product-feelings > li.active {
   font-weight: 600;
   background: #dbdbdb;
+  box-shadow: inset 0 1px 0 rgba(255,255,255, 0.4);
 }
 
 .product-list-item .product-feelings a {
