--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -718,4 +718,6 @@
   .want-active    { background-position: -39px   -45px; width: 18px; height: 18px; }
   .try            { background-position: -116px   -5px; width: 19px; height: 17px; }
   .try-active     { background-position: -116px  -42px; width: 19px; height: 17px; }
+
+  .like-count     { background-position: -160px   -7px; width: 16px; height: 13px; }
 }
