--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -35,3 +35,4 @@
 .icon-want-active   { #icons > .want-active() }
 .icon-try           { #icons > .try() }
 .icon-try-active    { #icons > .try-active() }
+.icon-like-count    { #icons > .like-count() }
