--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -1,6 +1,7 @@
 @import "/styles/variables.less";
 @import "/styles/mixins.less";
 
+@productBorderRadius: 6px;
 @productHoverTransition: ease-in-out 0.3s;
 
 .products-list {
@@ -19,9 +20,9 @@
   display: inline-block;
   vertical-align: top;
   padding: 0;
-  border-radius: 6px;
+  border-radius: @productBorderRadius;
   overflow: hidden;
-  box-shadow: 0 1px 2px rgba(0,0,0, 0.4);
+  box-shadow: 0 1px 2px rgba(0,0,0, 0.45);
 }
 
 .products-list .product-list-item.first {
@@ -33,11 +34,22 @@
   padding: 6px 0;
   text-align: center;
   font-size: 16px;
-  color: @gray-dark;
-  text-shadow: 0 -1px 0 rgba(0,0,0, 0.5);
-  box-shadow: 0 -1px 2px rgba(0,0,0,0.3);
+  color: @gray-light;
+  // Makes the text funky
+  // text-shadow: 0 -1px 0 rgba(0,0,0, 0.5);
+  box-shadow: 0 -1px 2px rgba(0,0,0,0.2);
 
-  #gradient > .vertical(#fff, #ebebeb);
+  #gradient > .vertical(#fff, #e8e8e8);
+}
+
+.products-list .icon-like-count,
+.products-list .like-count {
+  vertical-align: middle;
+}
+
+.products-list .like-count {
+  display: inline-block;
+  margin: 1px 0 0 2px;
 }
 
 .products-list .photo-wrapper {
@@ -50,6 +62,12 @@
 .photo-wrapper > .header,
 .photo-wrapper > .product-feelings, {
   line-height: @line-height-base;
+}
+
+.products-list .product-photo {
+  // photo needs border radius because of webkit overflow bug
+  border-top-right-radius: @productBorderRadius;
+  border-top-left-radius: @productBorderRadius;
 }
 
 .products-list .header {
