fixed loader, smarter view caching on explore

--- a/components/products-list/products-list-item-tmpl.handlebars
+++ b/components/products-list/products-list-item-tmpl.handlebars
@@ -7,7 +7,7 @@
   </div>
 
   {{! Photo }}
-  <img class="product-photo" src="{{filepicker product.photoUrl 227 227}}" alt="{{#if product.description}}{{product.description}}{{else}}{{product.name}}{{/if}}">
+  <img class="product-photo" src="{{filepicker product.photoUrl 227 227}}" width="227" height="227" alt="{{#if product.description}}{{product.description}}{{else}}{{product.name}}{{/if}}">
 
 
   {{! Update Feelings }}
