--- a/styles/main.less
+++ b/styles/main.less
@@ -54,4 +54,9 @@ a:focus {
   width: 100%;
   height: 100%;
   z-index: 100000;
+  background-color: rgba(0,0,0, 0.15);
+}
+
+#main-loader > .spinner {
+  margin-top: -150px;
 }
