IE fixing, better geo-location fallback

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -49,9 +49,9 @@
       <div class="badge">
         <div class="avatar-wrapper">
           <span class="avatar-shadow"></span>
-          <img class="avatar" src="/img/placeholder/avatar-38x38.jpg" />
+          <img class="avatar" src="{{filepicker user.avatarUrl 38 38}}" />
         </div>
-        <span class="username">Willmer123</span>
+        <span class="username">{{user.screenName}}</span>
         <i class="icon-chevron-down expansion-indicator"></i>
         <ul class="dropdown-menu">
             <li>
