made modal, modal-manager componenets, setup product details modal, lots of other stuff

--- a/components/app/app-tmpl.handlebars
+++ b/components/app/app-tmpl.handlebars
@@ -1,2 +1,3 @@
-<div class="header-navbar"></div>
-<div class="pages container"></div>
+<div id="app-header" class="header-navbar"></div>
+<div id="app-modals" class="modals"></div>
+<div id="app-pages"  class="pages container"></div>
