--- a/components/products-list/products-list-item-tmpl.handlebars
+++ b/components/products-list/products-list-item-tmpl.handlebars
@@ -12,6 +12,7 @@
 
   {{! Update Feelings }}
   <ul class="product-feelings">
+    {{! TODO: make anchors buttons}}
     <li class="feeling-want {{#if product.userWants}}active{{/if}}">
       <a href="#">
         <i class="icon-want"></i>
