--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -152,17 +152,17 @@
 
 .product-feelings a:hover .icon-like,
 .product-feelings li.active .icon-like {
-  #icons > .like-active();
+  #sprite > .like-active();
 }
 
 .product-feelings a:hover .icon-want,
 .product-feelings li.active .icon-want {
-  #icons > .want-active();
+  #sprite > .want-active();
 }
 
 .product-feelings a:hover .icon-try,
 .product-feelings li.active .icon-try {
-  #icons > .try-active();
+  #sprite > .try-active();
 }
 
 .product-list-item:hover .header {
