--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -706,18 +706,27 @@
   }
 }
 
-// Icons Position and Dimensions
-// -----------------------------
+// Sprite Positioning and Dimensions
+// ---------------------------------
 
-#icons {
-  .chevron-down   { background-position: -4px     -5px; width: 16px; }
+#sprite {
+  .chevron-down   { background-position:   -4px   -5px; width: 16px; }
 
-  .like           { background-position: -76px    -7px; width: 18px; height: 15px; }
-  .like-active    { background-position: -76px   -48px; width: 18px; height: 15px; }
-  .want           { background-position: -39px    -5px; width: 18px; height: 18px; }
-  .want-active    { background-position: -39px   -45px; width: 18px; height: 18px; }
+  .like           { background-position:  -76px   -7px; width: 18px; height: 15px; }
+  .like-active    { background-position:  -76px  -48px; width: 18px; height: 15px; }
+  .want           { background-position:  -39px   -5px; width: 18px; height: 18px; }
+  .want-active    { background-position:  -39px  -45px; width: 18px; height: 18px; }
   .try            { background-position: -116px   -5px; width: 19px; height: 17px; }
   .try-active     { background-position: -116px  -42px; width: 19px; height: 17px; }
 
   .like-count     { background-position: -160px   -7px; width: 16px; height: 13px; }
+
+  .modal-close    { background-position:   -3px  -87px; width: 20px; height: 20px; }
+
+  .heart-big      { background-position:  -76px  -87px; width: 20px; height: 20px; }
+}
+
+.sprite() {
+  background-image: url('@{sprite-path}');
+  background-repeat: no-repeat;
 }
