got icons in.. need to align

--- a/components/wlt/wlt-styles.less
+++ b/components/wlt/wlt-styles.less
@@ -2,5 +2,12 @@
 @import "/styles/mixins.less";
 
 .wlt-btn-group > .btn {
-  .buttonBackground(#e6e6e6, #fff);
+  width: 33.33333333333%;
+  padding: 24px 0 22px 0;
+
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  #gradient > .vertical(#fff, #e6e6e6);
 }
