--- a/components/wlt/wlt-tmpl.handlebars
+++ b/components/wlt/wlt-tmpl.handlebars
@@ -1,3 +1,12 @@
-<button class="btn btn-want{{#if userWants}} active{{/if}}">Want</button>
-<button class="btn btn-like{{#if userLikes}} active{{/if}}">Like</button>
-<button class="btn btn-try{{#if userTried}} active{{/if}}">Try</button>
+<button class="btn btn-want{{#if userWants}} active{{/if}}">
+  <i class="icon-wlt"></i>
+  Want
+</button>
+<button class="btn btn-like{{#if userLikes}} active{{/if}}">
+  <i class="icon-wlt"></i>
+  Like It
+</button>
+<button class="btn btn-try{{#if userTried}} active{{/if}}">
+  <i class="icon-wlt"></i>
+  Tried
+</button>
