--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -11,6 +11,14 @@
 .product-details-modal .product-actions {
   position: absolute;
   bottom: 0;
+  width: 100%;
+}
+
+.product-details-modal .product-details {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 24px;
+  color: lighten(@text-color, 10%);
 }
 
 .product-details-modal .product-details h1 {
@@ -37,4 +45,9 @@
 .product-details .stats > .product-stat {
   display: table-cell;
   width: 1%;
+}
+
+.product-details-modal .wlt {
+  display: block;
+  margin-bottom: 24px;
 }
