--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -231,3 +231,24 @@ input[type="submit"].btn {
   color: @gray-dark;
   text-decoration: none;
 }
+
+// WLT
+// --------------
+
+.btn-want > .icon-wlt {
+  vertical-align: middle;
+  margin-top: 0;
+  #sprite > #wlt > .want();
+}
+
+.btn-like > .icon-wlt {
+  vertical-align: middle;
+  margin-top: 0;
+  #sprite > #wlt > .like();
+}
+
+.btn-try > .icon-wlt {
+  vertical-align: middle;
+  margin-top: 0;
+  #sprite > #wlt > .try();
+}
