--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -712,10 +712,10 @@
 #sprite {
   .chevron-down   { background-position:   -4px   -5px; width: 16px; }
 
-  .like           { background-position:  -76px   -7px; width: 18px; height: 15px; }
-  .like-active    { background-position:  -76px  -48px; width: 18px; height: 15px; }
   .want           { background-position:  -39px   -5px; width: 18px; height: 18px; }
   .want-active    { background-position:  -39px  -45px; width: 18px; height: 18px; }
+  .like           { background-position:  -76px   -7px; width: 18px; height: 15px; }
+  .like-active    { background-position:  -76px  -48px; width: 18px; height: 15px; }
   .try            { background-position: -116px   -5px; width: 19px; height: 17px; }
   .try-active     { background-position: -116px  -42px; width: 19px; height: 17px; }
 
@@ -724,6 +724,12 @@
   .modal-close    { background-position:   -3px  -87px; width: 20px; height: 20px; }
 
   .heart-big      { background-position:  -76px  -87px; width: 20px; height: 20px; }
+
+  #wlt {
+    .want         { background-position: -207px   -4px; width: 22px; height: 22px; }
+    .like         { background-position: -253px   -5px; width: 22px; height: 22px; }
+    .try          { background-position: -304px   -5px; width: 22px; height: 22px; }
+  }
 }
 
 .sprite() {
