hooked up wlt to events and rendered necessary views

--- a/modals/product-details/product-details-tmpl.handlebars
+++ b/modals/product-details/product-details-tmpl.handlebars
@@ -27,7 +27,7 @@
 
         {{! Price }}
         {{#if product.price}}
-        <div class="product-stat product-stat-likes">
+        <div class="product-stat product-stat-price">
           <span class="product-stat-value">
             ${{money product.price}}
           </span>
