--- a/components/wlt/wlt-styles.less
+++ b/components/wlt/wlt-styles.less
@@ -3,11 +3,23 @@
 
 .wlt-btn-group > .btn {
   width: 33.33333333333%;
-  padding: 24px 0 22px 0;
+  padding: 24px 0 18px 0;
 
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
 
   #gradient > .vertical(#fff, #e6e6e6);
+}
+
+.wlt-btn-group > .btn-want > .icon-wlt {
+  margin-top: -3px;
+  margin-right: 3px;
+  padding-top: 3px;
+}
+
+.wlt-btn-group > .btn-like > .icon-wlt {
+  margin-top: -2px;
+  margin-right: 3px;
+  padding-top: 2px;
 }
