styled add to collection btn

--- a/components/wlt/wlt-styles.less
+++ b/components/wlt/wlt-styles.less
@@ -12,6 +12,10 @@
   #gradient > .vertical(#fff, #e6e6e6);
 }
 
+.wlt-btn-group > .btn.active {
+  color: #555;
+}
+
 .wlt-btn-group > .btn-want > .icon-wlt {
   margin-top: -3px;
   margin-right: 3px;
