--- a/modals/product-details/product-details-tmpl.handlebars
+++ b/modals/product-details/product-details-tmpl.handlebars
@@ -46,6 +46,7 @@
 
       {{! Add to Collection }}
       <button class="btn btn-darker btn-add-to-collection">
+        <i class="icon-green-plus"></i>
         Add to Collections
       </button>
     </div>
