--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -730,6 +730,8 @@
     .like         { background-position: -253px   -5px; width: 22px; height: 22px; }
     .try          { background-position: -304px   -5px; width: 22px; height: 22px; }
   }
+
+  .green-plus     { background-position: -201px  -41px; width: 27px; height: 27px; }
 }
 
 .sprite() {
