--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -37,3 +37,4 @@
 .icon-try-active    { #sprite > .try-active() }
 .icon-like-count    { #sprite > .like-count() }
 .icon-heart-big     { #sprite > .heart-big() }
+.icon-green-plus    { #sprite > .green-plus() }
