--- a/styles/main.less
+++ b/styles/main.less
@@ -14,6 +14,7 @@
 @import "sprite.less";
 @import "modals.less";
 @import "forms.less";
+@import "checkboxes.less";
 @import "pages.less";
 
 html {
