--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -710,28 +710,31 @@
 // ---------------------------------
 
 #sprite {
-  .chevron-down   { background-position:   -4px   -5px; width: 16px; }
+  .chevron-down         { background-position:   -4px   -5px; width: 16px; }
 
-  .want           { background-position:  -39px   -5px; width: 18px; height: 18px; }
-  .want-active    { background-position:  -39px  -45px; width: 18px; height: 18px; }
-  .like           { background-position:  -76px   -7px; width: 18px; height: 15px; }
-  .like-active    { background-position:  -76px  -48px; width: 18px; height: 15px; }
-  .try            { background-position: -116px   -5px; width: 19px; height: 17px; }
-  .try-active     { background-position: -116px  -42px; width: 19px; height: 17px; }
+  .want                 { background-position:  -39px   -5px; width: 18px; height: 18px; }
+  .want-active          { background-position:  -39px  -45px; width: 18px; height: 18px; }
+  .like                 { background-position:  -76px   -7px; width: 18px; height: 15px; }
+  .like-active          { background-position:  -76px  -48px; width: 18px; height: 15px; }
+  .try                  { background-position: -116px   -5px; width: 19px; height: 17px; }
+  .try-active           { background-position: -116px  -42px; width: 19px; height: 17px; }
 
-  .like-count     { background-position: -160px   -7px; width: 16px; height: 13px; }
+  .like-count           { background-position: -160px   -7px; width: 16px; height: 13px; }
 
-  .modal-close    { background-position:   -3px  -87px; width: 20px; height: 20px; }
+  .modal-close          { background-position:   -3px  -87px; width: 20px; height: 20px; }
 
-  .heart-big      { background-position:  -76px  -87px; width: 20px; height: 20px; }
+  .heart-big            { background-position:  -76px  -87px; width: 20px; height: 20px; }
 
   #wlt {
-    .want         { background-position: -207px   -4px; width: 22px; height: 22px; }
-    .like         { background-position: -253px   -5px; width: 22px; height: 22px; }
-    .try          { background-position: -304px   -5px; width: 22px; height: 22px; }
+    .want               { background-position: -207px   -4px; width: 22px; height: 22px; }
+    .like               { background-position: -253px   -5px; width: 22px; height: 22px; }
+    .try                { background-position: -304px   -5px; width: 22px; height: 22px; }
   }
 
-  .green-plus     { background-position: -201px  -41px; width: 27px; height: 27px; }
+  .green-plus           { background-position: -201px  -41px; width: 27px; height: 27px; }
+
+  .checkbox             { background-position:  -25px -100px; width: 37px; height: 37px; }
+  .checkbox-checked     { background-position:  -60px -100px; width: 37px; height: 37px; }
 }
 
 .sprite() {
