added regions append syntax, used append for product details modal pages because setElement was doing some funky stuff

--- a/modals/product-details/product-details-tmpl.handlebars
+++ b/modals/product-details/product-details-tmpl.handlebars
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="span3 details-wrapper pages">
+  <div class="span3 page-wrapper">
     {{! Product Details }}
     {{! Add to Collection }}
   </div>
