--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -1,9 +1,10 @@
 @import "/styles/variables.less";
 @import "/styles/mixins.less";
 
-.product-details-modal .details-wrapper {
+.product-details-modal .pages {
   // size of photo
-  min-height: 430px;
+  height: 430px;
+  overflow-y: scroll;
   // So we can position product actions to the bottom
   position: relative;
 }
